feat: menu+footer, vite

--- a/.shopifyignore
+++ b/.shopifyignore
@@ -11,3 +11,7 @@
 #
 # Ignore templates and sections with a regular expression:
 #   /(templates|sections)/.*\.json/
+
+package.json
+package-lock.json
+node_modules
